# farm1

./: .gitignore  extender_predicciones.py  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py  update_pipeline.py
.streamlit/: config.toml
src/: bronze.py  gold.py  silver.py  train_models.py  utils.py
