[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farm1"
version = "1.0.0"
dependencies = [
    "streamlit==1.28.0",
    "plotly==5.24.0",
    "pandas==2.2.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.10",
    "numpy==1.26.0"
]
requires-python = ">=3.9,<3.13"
