[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "farm1"
version = "1.0.0"
requires-python = ">=3.9,<3.11"
dependencies = [
    "streamlit==1.28.0",
    "plotly==5.17.0",
    "pandas==1.5.3",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "numpy==1.24.3"
]
